Fixed process center column from being too big

--- a/src/components/Process/styles.css
+++ b/src/components/Process/styles.css
@@ -1,5 +1,5 @@
 .container {
-  margin-bottom: -120px;
+  margin-bottom: -150px;
 }
 
 .process {
@@ -9,7 +9,6 @@
 }
 
 .process img {
-  max-width: 355px;
   height: auto;
   display: block;
   align-self: center;
@@ -52,20 +51,24 @@
 
 .laptop,
 .code {
+  max-width: 355px;
   width: 100%;
 }
 
 .fileTypes {
+  max-width: 210px;
   width: 100%;
 }
 
 .arrow {
+  max-width: 100px;
   width: 50%;
 }
 
 @media (max-width: 768px)  {
   .process {
     flex-direction: column;
+    align-items: center;
   }
 
   .stepContainer {
@@ -74,7 +77,7 @@
 
   .centerContainer {
     flex-direction: row;
-    width: 100%;
+    width: 70%;
     justify-content: center;
   }
 
